[package]
name = "mls-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mls-cli"
path = "src/main.rs"

[dependencies]
# MLS implementation
mls-rs = { version = "0.54", features = ["std"] }
mls-rs-crypto-rustcrypto = "0.21"
mls-rs-codec = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64
base64 = "0.22"

# Async runtime (mls-rs uses async internally)
tokio = { version = "1", features = ["full"] }
